edition = "2023";

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

option go_package = "lovify-auth/service";
package lovify_auth_service;

service AuthService {
  rpc RegisterUser(RegisterRequest) returns (google.protobuf.Empty);
  rpc Login(LoginRequest) returns (LoginResponse);
  rpc Authorize(AuthorizationRequest) returns (google.protobuf.Empty);
}

message RegisterRequest {
  string email = 1;
  string password = 2;
}

message LoginRequest {
  string email = 1;
  string password = 2;
}

message LoginResponse {
  Token sessionToken = 1;
  Token csrfToken = 2;
  bool isProfileConnected = 3;
  string profileID = 4;
}

message Token {
  string token = 1;
  google.protobuf.Timestamp expirationDate = 2;
}

message AuthorizationRequest {
  string email = 1;
  string sessionToken = 2;
  string csrfToken = 3;
}